--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -555,9 +555,176 @@
    "outputs": [],
    "source": [
     "select * from employees e\n",
-    "join employees e1\n",
-    "on e.emp_id<>e1.emp_id\n",
-    "and e.emp_id=e1.manager_id"
+    "join employees m\n",
+    "on e.manager_id=m.emp_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6e3ad638-b66a-4907-ae3f-f6082af0392c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find duplicate records using joins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "807d0a97-ae94-483e-8fe0-c347d43a9ebd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from employee_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "99a849c0-99f7-4839-a10e-412dbd9b0cee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with cte as(\n",
+    "select *,\n",
+    "row_number() over(order by emp_id desc) as rn\n",
+    "from employee_duplicates\n",
+    ")\n",
+    "select c1.emp_id,c2.emp_name\n",
+    "from cte c1\n",
+    "join cte c2\n",
+    "on c1.emp_id=c2.emp_id\n",
+    "and c1.emp_name=c2.emp_name\n",
+    "and c1.rn < c2.rn;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8c2b4c22-7d48-4f86-903b-04bf7c629fc7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find customers who never placed an order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e3fb81ae-50a8-4760-ae63-b59a3bd1dd1d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from customers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a284cba3-573b-4ddb-a723-31f099556853",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "346a2210-7a3e-41eb-aa96-be69306560b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from customers c\n",
+    "left join orders o\n",
+    "on c.customer_id=o.customer_id\n",
+    "WHERE o.customer_id IS NULL;--if you are using left join,so all the values from the left table will always be there, therefore find the null values from the right table on the column which we used for joining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1d78c4e6-cc98-41a3-87b5-17a4f988be5a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from order"
    ]
   },
   {
@@ -652,7 +819,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b3ac3124-d5a2-4db4-b932-7ab2a3ec9d48",
      "showTitle": false,
@@ -661,7 +831,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "show tables"
+   ]
   }
  ],
  "metadata": {
