--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -39,6 +39,40 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f25ce9d6-5981-4ead-b98f-420c8715cf13",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE TABLE sales (\n",
+    "    sale_id INT,\n",
+    "    customer_id INT,\n",
+    "    amount DECIMAL(10,2),\n",
+    "    sale_date DATE\n",
+    ");\n",
+    "INSERT INTO sales VALUES\n",
+    "(101, 1, 250.00, '2026-01-05'),\n",
+    "(102, 1, 150.50, '2026-01-10'),\n",
+    "(103, 2, 500.00, '2026-01-07'),\n",
+    "(104, 2, 200.00, '2026-01-12'),\n",
+    "(105, 3, 300.00, '2026-01-08'),\n",
+    "(106, 4, 450.00, '2026-01-09'),\n",
+    "(107, 4, 100.00, '2026-01-15');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "implicitDf": true,
       "rowLimit": 10000
      },
@@ -710,13 +744,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ab4a0443-4f3f-4452-b564-f6c74cf7dddf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find top 3 highest salary employee from each department"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f93e2df9-42e3-4fc4-aa61-9dcc8a1c3145",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT \n",
+    "        e.emp_id,\n",
+    "        e.emp_name,\n",
+    "        e.salary,\n",
+    "        d.dept_name,\n",
+    "        ROW_NUMBER() OVER (\n",
+    "            PARTITION BY e.dept_id\n",
+    "            ORDER BY e.salary DESC\n",
+    "        ) AS rn\n",
+    "    FROM employees e\n",
+    "    JOIN departments d\n",
+    "        ON e.dept_id = d.dept_id\n",
+    ") t\n",
+    "WHERE rn <= 3;\n",
+    "--When emp and dept are two diff tables. needed when info abput dept is required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0e793f4e-9072-4a6e-b6dd-e1910ed5cf17",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (\n",
+    "               PARTITION BY dept_id\n",
+    "               ORDER BY salary DESC\n",
+    "           ) AS rn\n",
+    "    FROM employees\n",
+    ") t\n",
+    "WHERE rn <= 3;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0067da45-06f1-4326-a6af-002139dcc562",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (\n",
+    "               PARTITION BY dept_id\n",
+    "               ORDER BY salary DESC\n",
+    "           ) AS rn\n",
+    "    FROM employees\n",
+    ") t\n",
+    "WHERE rn <= 3;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d3ada143-8453-4450-927c-d4f1bb038735",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find second highest salary using joins"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "1d78c4e6-cc98-41a3-87b5-17a4f988be5a",
+     "nuid": "b4b85e7e-8703-4e6f-82e9-f7109494ca24",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -724,7 +887,29 @@
    },
    "outputs": [],
    "source": [
-    "select * from order"
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (ORDER BY salary DESC) AS rn\n",
+    "    FROM employees\n",
+    ") t\n",
+    "WHERE rn = 3;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a84af6a6-f646-465e-bb8b-d63c1cac3e52",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find employees earning more than their manager"
    ]
   },
   {
@@ -737,7 +922,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "64caf70b-75f3-46ac-b951-86a014ba0956",
+     "nuid": "aeefc53f-9704-4fed-b5a7-afaac2f936a1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -745,7 +930,32 @@
    },
    "outputs": [],
    "source": [
-    "select * from employees_old\n"
+    "SELECT e.emp_id AS emp_id,\n",
+    "       e.emp_name AS employee_name,\n",
+    "       e.salary AS emp_salary,\n",
+    "       m.emp_id AS mgr_id,\n",
+    "       m.emp_name AS manager_name,\n",
+    "       m.salary AS mgr_salary\n",
+    "FROM employees e\n",
+    "JOIN employees m \n",
+    "    ON e.manager_id = m.emp_id\n",
+    "WHERE e.salary > m.salary;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d9062d2d-2d92-42a3-9db9-d73052b43adf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Calculate total sales per customer"
    ]
   },
   {
@@ -758,7 +968,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "3a42ebdf-ed12-4930-88d3-30af85f36210",
+     "nuid": "a7c71851-6868-4dab-aab2-3eed7a068f12",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -766,7 +976,7 @@
    },
    "outputs": [],
    "source": [
-    "select * from employees"
+    "select * from sales"
    ]
   },
   {
@@ -779,7 +989,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "4f259bcf-89a0-4720-9b4d-bd486024bd1b",
+     "nuid": "77769861-4ecd-4113-af3d-c1187ad65811",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -787,7 +997,7 @@
    },
    "outputs": [],
    "source": [
-    "select * from departments"
+    "select * from customers"
    ]
   },
   {
@@ -795,12 +1005,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "67b84a0c-d1ce-4a6c-a150-2c19a5e71db3",
+     "nuid": "1810648f-8eea-4244-80fc-a4102a926f4e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -808,31 +1015,15 @@
    },
    "outputs": [],
    "source": [
-    "select * from employees E\n",
-    "left join departments D\n",
-    "on D.dept_id=E.dept_id\n",
-    "where D.dept_id is null"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "b3ac3124-d5a2-4db4-b932-7ab2a3ec9d48",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "show tables"
+    "SELECT \n",
+    "    c.customer_id,\n",
+    "    c.customer_name,\n",
+    "    SUM(s.amount) AS total_sales\n",
+    "FROM sales s\n",
+    "JOIN customers c\n",
+    "    ON c.customer_id = s.customer_id\n",
+    "GROUP BY c.customer_id, c.customer_name;\n",
+    "--All the columns in the group by should be in the select statement"
    ]
   }
  ],
