--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -474,6 +474,22 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "17379621-9e45-4fe4-8a19-dbb23105b861",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# **JOINS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "55660703-7300-4d89-870f-484898f7810a",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1024,6 +1040,410 @@
     "    ON c.customer_id = s.customer_id\n",
     "GROUP BY c.customer_id, c.customer_name;\n",
     "--All the columns in the group by should be in the select statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fa0e0e30-74c3-440f-a5a9-7e4163dfc837",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find missing records between two datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "556fd5b5-ae13-4603-a3fe-40bfd5a267cd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select emp_id,emp_name from employees where emp_id not in(select emp_id from Employees_old)\n",
+    "Union \n",
+    "select emp_id,emp_name from Employees_old where emp_id not in(select emp_id from employees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "054c78a5-0681-4bad-a6eb-30fcc43738af",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT e.emp_id,e.emp_name\n",
+    "FROM employees e\n",
+    "LEFT JOIN Employees_old o\n",
+    "    ON e.emp_id = o.emp_id\n",
+    "WHERE o.emp_id IS NULL\n",
+    "\n",
+    "UNION\n",
+    "\n",
+    "SELECT o.emp_id,o.emp_name\n",
+    "FROM Employees_old o\n",
+    "LEFT JOIN employees e\n",
+    "    ON o.emp_id = e.emp_id\n",
+    "WHERE e.emp_id IS NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "54f09b86-6fd7-47d6-82cd-f2c40af9c55f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "62357947-f5a0-4f50-a095-4a8a9a5b438a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from employees_old"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "833213f2-6e38-4d35-af39-57746bb1d4ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Identify orphan records using joins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3e1ddeef-db4d-464c-ac9a-6ecf9358a5db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM employees\n",
+    "WHERE manager_id IS NOT NULL\n",
+    "AND manager_id NOT IN (\n",
+    "    SELECT emp_id FROM employees\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "905aace4-9a59-4cb5-beee-9c8d149a032e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Compare two tables and show differences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76de65fb-baa0-4c53-adf0-68dad4582a97",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT emp_id,emp_name FROM employees\n",
+    "EXCEPT\n",
+    "SELECT emp_id,emp_name FROM employees_old\n",
+    "\n",
+    "UNION ALL\n",
+    "\n",
+    "SELECT emp_id,emp_name FROM employees_old\n",
+    "EXCEPT\n",
+    "SELECT emp_id,emp_name FROM employees;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1e868002-cb51-404d-95e0-00a6c9170fcb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find customers with no orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f8c14d71-9706-4e14-982d-6fc5225a4ff2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM Customers c\n",
+    "LEFT JOIN Orders o\n",
+    "    ON c.customer_id = o.customer_id\n",
+    "WHERE o.customer_id IS NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c4457c8d-9562-4e93-ba13-fbd077e4ea5e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from customers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "33aa6d91-8dea-4225-b8a3-bbd3353fea6c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from orders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "dc8a3d98-0b70-4481-89a8-2f89eebf26a8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Find duplicate records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f9c75218-807b-46e6-be63-65d3f365c77a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from employee_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6f333468-44fe-4549-b4f0-042a788e4a6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (\n",
+    "               PARTITION BY emp_id\n",
+    "               ORDER BY emp_id\n",
+    "           ) AS rn\n",
+    "    FROM employee_duplicate\n",
+    ") t\n",
+    "WHERE rn > 1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ed0c822a-80c6-4acf-8a49-fa950948a867",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Second highest salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b35d43a8-03cf-43e0-8196-3c8268832787",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           DENSE_RANK() OVER (ORDER BY salary DESC) AS rnk\n",
+    "    FROM employees\n",
+    ") t\n",
+    "WHERE rnk = 2;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7ceb2685-ce9a-4a3b-88bc-8b219b17bd37",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# **Window Function**"
    ]
   }
  ],
